# asteroids

./: CMakeLists.txt  README.md
headers/: Asteroid.hpp  AsteroidManager.hpp  Bullet.hpp  Entity.hpp  ErrorManager.hpp  Ship.hpp  TextureManager.hpp  typedefs.hpp  utils.hpp  vals.hpp
res/asteroids/: bigs.xcf  meds.xcf  smalls.xcf
res/ship/: ship_base.xcf
src/: Asteroid.cpp  AsteroriManager.cpp  Bullet.cpp  Entity.cpp  ErrorManager.cpp  Ship.cpp  TextureManager.cpp  main.cpp
